fixed overflow for <li> (trainers)

--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -1,5 +1,5 @@
 .trainers {
-  min-height: 633px;
+  min-height: 513px;
   background-color: #a7b1f1;
 
   h2 {
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -34,7 +34,21 @@
 
   li {
     position: relative;
-    width: 22.5%;
+    width: 22.4%;
+    margin-bottom: 20px;
+
+    &:nth-child(4n+2),
+    &:nth-child(4n+3) {
+      margin: 0 20px;
+    }
+
+    &:nth-child(4n+1) {
+      margin-right: 20px;
+    }
+
+    &:nth-child(4n+0) {
+      margin-left: 20px;
+    }
   }
 
   img {
